--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <div class="carousel-caption text-$indigo-100 d-md-block" style="font-family:'Spartan', sans-serif;letter-spacing :3px;">
             <h2><strong>“YOU CAN MAKE A DIFFERENCE RIGHT NOW”</strong></h2>
             <h4>DONATE TO FOUNDATION</h4>
-            <a href="TxnTest.php"> <button style="width:20rem;letter-spacing: 8px;font-weight: bolder;" class=" btn btn-success">
+            <a href="donat.html"> <button style="width:20rem;letter-spacing: 8px;font-weight: bolder;" class=" btn btn-success">
               DONATE NOW
             </button></a>
             </div>        
