--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
                 </div>
                 <div class="d-flex">
-                    <a href="TxnTest.php"> <button style="width:20rem;letter-spacing: 8px;font-weight: bolder;" class=" btn btn-success">
+                    <a href="donat.html"> <button style="width:20rem;letter-spacing: 8px;font-weight: bolder;" class=" btn btn-success">
                       DONATE
                     </button></a>
                 </div>
