--- a/donat.html
+++ b/donat.html
@@ -104,8 +104,17 @@ margin-left: 28%;
 <input class="fname" type="text" name="name" placeholder="Full name">
 <input type="text" name="Email" placeholder="Email">
 <input type="text" name="PhNo" placeholder="Phone number">
+<input type="text" name="Amount" placeholder="Amount">
 <input type="text" name="Address" placeholder="Address">
 </div>
+    <label for="cars" style="font-size: large;">Choose:</label>
+    <select id="cars" name="cars">
+      <option value="volvo" style="font-size: large;">Public</option>
+      <option value="saab" style="font-size: large;">Businessman</option>
+      <option value="fiat" selected style="font-size: large;">Organization</option>
+      <option value="fiat" selected style="font-size: large;">Trust</option>
+    </select>
+    <br><br>
 <button type="submit" href="index.html">Submit</button>
 </form>
 </div>
