--- a/donat.html
+++ b/donat.html
@@ -115,7 +115,7 @@ margin-left: 28%;
       <option value="fiat" selected style="font-size: large;">Trust</option>
     </select>
     <br><br>
-<button type="submit" href="index.html">Submit</button>
+<input type="button" value="Submit" onclick="history.back()">
 </form>
 </div>
 </body>
